// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Autocomplete /> by default matches with snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  display: block;
  width: 100%;
  height: 3.125rem;
  box-sizing: border-box;
  background: #fff;
  border: 0.125rem solid #eee;
  padding: 0 0.9375rem;
  outline: none;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 0.8888888888888888rem;
  line-height: 1.3;
  color: #222;
  -webkit-transition: border-color 0.4s;
  transition: border-color 0.4s;
}

.c1::-webkit-input-placeholder {
  color: #b8b8b8;
}

.c1::-moz-placeholder {
  color: #b8b8b8;
}

.c1:-ms-input-placeholder {
  color: #b8b8b8;
}

.c1::placeholder {
  color: #b8b8b8;
}

.c1::-moz-placeholder {
  color: #b8b8b8;
}

.c1:focus {
  border-color: #d8d8d8;
}

.c1::-ms-clear {
  display: none;
}

<div
  className="c0"
>
  <input
    aria-activedescendant=""
    aria-autocomplete="both"
    aria-expanded={false}
    aria-owns="autocomplete-results"
    autoComplete="off"
    className="c1"
    id="autocomplete"
    name="autocomplete"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Search a kitten…"
    type="text"
  />
</div>
`;

exports[`<Autocomplete /> with icon matches with snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  display: block;
  width: 100%;
  height: 3.125rem;
  box-sizing: border-box;
  background: #fff;
  border: 0.125rem solid #eee;
  padding: 0 0.9375rem;
  outline: none;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 0.8888888888888888rem;
  line-height: 1.3;
  color: #222;
  -webkit-transition: border-color 0.4s;
  transition: border-color 0.4s;
  padding-left: 2.8125rem;
}

.c1::-webkit-input-placeholder {
  color: #b8b8b8;
}

.c1::-moz-placeholder {
  color: #b8b8b8;
}

.c1:-ms-input-placeholder {
  color: #b8b8b8;
}

.c1::placeholder {
  color: #b8b8b8;
}

.c1::-moz-placeholder {
  color: #b8b8b8;
}

.c1:focus {
  border-color: #d8d8d8;
}

.c1::-ms-clear {
  display: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 1.125rem;
  z-index: 1;
  left: 0;
}

<div
  className="c0"
>
  <input
    aria-activedescendant=""
    aria-autocomplete="both"
    aria-expanded={false}
    aria-owns="autocomplete-results"
    autoComplete="off"
    className="c1"
    id="autocomplete"
    name="autocomplete"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Search a kitten…"
    type="text"
  />
  <span
    aria-hidden="true"
    className="c2"
    iconPosition="left"
  >
    <svg
      fill="#222"
      height={15}
      viewBox="0 0 12 15"
      width={15}
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Location
      </title>
      <path
        d="M6 0C2.686 0 0 2.72 0 6.033 0 7.69.672 9.186 1.758 10.31L6 14.313l4.282-4.094v-.008A6.003 6.003 0 0 0 6 0zm.04 8.4a2.4 2.4 0 1 1 0-4.8 2.4 2.4 0 0 1 0 4.8z"
      />
    </svg>
  </span>
</div>
`;

exports[`<Autocomplete /> with loading matches with snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  display: block;
  width: 100%;
  height: 3.125rem;
  box-sizing: border-box;
  background: #fff;
  border: 0.125rem solid #eee;
  padding: 0 0.9375rem;
  outline: none;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 0.8888888888888888rem;
  line-height: 1.3;
  color: #222;
  -webkit-transition: border-color 0.4s;
  transition: border-color 0.4s;
}

.c1::-webkit-input-placeholder {
  color: #b8b8b8;
}

.c1::-moz-placeholder {
  color: #b8b8b8;
}

.c1:-ms-input-placeholder {
  color: #b8b8b8;
}

.c1::placeholder {
  color: #b8b8b8;
}

.c1::-moz-placeholder {
  color: #b8b8b8;
}

.c1:focus {
  border-color: #d8d8d8;
}

.c1::-ms-clear {
  display: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 1.125rem;
  z-index: 1;
  right: 0;
}

<div
  className="c0"
>
  <input
    aria-activedescendant=""
    aria-autocomplete="both"
    aria-expanded={false}
    aria-owns="autocomplete-results"
    autoComplete="off"
    className="c1"
    id="autocomplete"
    name="autocomplete"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Search a kitten…"
    type="text"
  />
  <div
    className="k-Loader c2"
  >
    <svg
      className="k-Loader__circle"
      viewBox="0 0 10 10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx={5}
        cy={5}
        fill="#b8b8b8"
        r={5}
      />
    </svg>
    <svg
      className="k-Loader__circle"
      viewBox="0 0 10 10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx={5}
        cy={5}
        fill="#b8b8b8"
        r={5}
      />
    </svg>
    <svg
      className="k-Loader__circle"
      viewBox="0 0 10 10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx={5}
        cy={5}
        fill="#b8b8b8"
        r={5}
      />
    </svg>
  </div>
</div>
`;
